--- a/examples/ahrs/CMakeLists.txt
+++ b/examples/ahrs/CMakeLists.txt
@@ -6,7 +6,7 @@ ADD_DEFINITIONS(-DEIGEN_NO_MALLOC -DUKF_SINGLE_PRECISION)
 
 INCLUDE_DIRECTORIES(../../include ${eigen_dir})
 
-cmake_policy(SET CMP0042 NEW)
+#cmake_policy(SET CMP0042 NEW)
 
 ADD_LIBRARY(ahrs SHARED ahrs.cpp)
 SET_TARGET_PROPERTIES(ahrs PROPERTIES OUTPUT_NAME ahrs)
