--- a/examples/sfwa_ukf/CMakeLists.txt
+++ b/examples/sfwa_ukf/CMakeLists.txt
@@ -6,7 +6,7 @@ ADD_DEFINITIONS(-DEIGEN_NO_MALLOC -DUKF_DOUBLE_PRECISION)
 
 INCLUDE_DIRECTORIES(../../include ${eigen_dir})
 
-cmake_policy(SET CMP0042 NEW)
+#cmake_policy(SET CMP0042 NEW)
 
 ADD_LIBRARY(sfwa_ukf SHARED cukf.cpp)
 SET_TARGET_PROPERTIES(sfwa_ukf PROPERTIES OUTPUT_NAME cukf)
